# Magic

./: .gitignore  .travis.yml  BasicLands.hs  Core.hs  Engine.hs  Events.hs  IdList.hs  Labels.hs  M12.hs  Magic.cabal  Magic.hs  Makefile  ObjectTypes.hs  Predicates.hs  README.md  TargetList.hs  Types.hs  Utils.hs  cabal.project  stack.yaml
Magic/: BasicLands.hs  CLI.hs  Core.hs  Description.hs  Engine.hs  Events.hs  IdList.hs  LICENSE  Labels.hs  M12.hs  M13.hs  Magic.cabal  Makefile  ObjectTypes.hs  Predicates.hs  Target.hs  Types.hs  Utils.hs
Magic-CLI/: Magic-CLI.cabal  stack.yaml
Magic-CLI/src/: Main.hs
Magic-CLI/src/Magic/: CLI.hs  Description.hs
Magic-Cards/: LICENSE  Magic-Cards.cabal  Makefile  stack.yaml
Magic-Cards/src/Magic/: AvacynRestored.hs  BasicLands.hs  M13.hs
Magic-Web-Client/: index.html  magic.css  magic.js
Magic-Web-Server/: LICENSE  Magic-Web-Server.cabal  Makefile
Magic-Web-Server/src/: Main.hs
Magic-Web-Server/src/Magic/: Json.hs
Magic/Engine/: Events.hs  Types.hs
Magic/src/: Magic.hs
Magic/src/Magic/: Abilities.hs  CLI.hs  Combat.hs  Core.hs  Cost.hs  Description.hs  Engine.hs  Events.hs  IdList.hs  Labels.hs  Layers.hs  Monads.hs  Object.hs  ObjectTypes.hs  Predicates.hs  Some.hs  Target.hs  Types.hs  Utils.hs  World.hs
Magic/src/Magic/Engine/: Events.hs  Types.hs
tests/: CLITest.hs  Main.hs
