name:               Magic
version:            0.1
-- synopsis:
-- description:
license:            BSD3
homepage:           https://github.com/MedeaMelana/Magic
bug-reports:        https://github.com/MedeaMelana/Magic/issues
license-file:       LICENSE
author:             Martijn van Steenbergen
maintainer:         martijn@van.steenbergen.nl
-- copyright:
category:           Game
build-type:         Simple
cabal-version:      >=1.8

library
  exposed-modules:  Magic.BasicLands,
                    Magic.Core,
                    Magic.CLI,
                    Magic.Engine,
                    Magic.Events,
                    Magic.IdList,
                    Magic.Labels,
                    Magic.M13,
                    Magic.ObjectTypes,
                    Magic.Predicates,
                    Magic.Target
                    Magic.Types,
                    Magic.Utils
  -- other-modules:
  build-depends:    base < 5,
                    containers,
                    fclabels ==1.1.*,
                    operational ==0.2.*,
                    mtl ==2.1.*,
                    MonadRandom ==0.1.*,
                    random-shuffle ==0.0.*,
                    text ==0.11.*,
                    safe ==0.3.*,
                    Boolean ==0.1.*
