name:               Magic-CLI
version:            0.1
-- synopsis:
-- description:
license:            BSD3
homepage:           https://github.com/MedeaMelana/Magic
bug-reports:        https://github.com/MedeaMelana/Magic/issues
license-file:       LICENSE
author:             Martijn van Steenbergen
maintainer:         martijn@van.steenbergen.nl
-- copyright:
category:           Game
build-type:         Simple
cabal-version:      >=1.8

executable magic-cli
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Magic.CLI,
                    Magic.Description
  build-depends:    base < 5,
                    Boolean ==0.1.*,
                    Magic ==0.1.*,
                    Magic-Cards ==0.1.*,
                    MonadRandom ==0.1.*,
                    mtl ==2.1.*,
                    containers,
                    fclabels ==2.0.*,
                    operational ==0.2.*,
                    safe ==0.3.*,
                    text ==1.1.*
