name:               Magic-Cards
version:            0.1
-- synopsis:
-- description:
license:            BSD3
homepage:           https://github.com/MedeaMelana/Magic
bug-reports:        https://github.com/MedeaMelana/Magic/issues
license-file:       LICENSE
author:             Martijn van Steenbergen
maintainer:         martijn@van.steenbergen.nl
-- copyright:
category:           Game
build-type:         Simple
cabal-version:      >=1.8
tested-with:        GHC ==8.6.3

library
  hs-source-dirs:   src
  exposed-modules:  Magic.AvacynRestored,
                    Magic.BasicLands,
                    Magic.M13
  build-depends:    base < 5,
                    Magic ==0.1.*,
                    containers,
                    fclabels ==2.0.*,
                    Boolean ==0.2.*,
                    text >=1.1 && <1.3,
                    multiset ==0.3.*
