name:               Magic-Web-Server
version:            0.1
-- synopsis:
-- description:
license:            BSD3
homepage:           https://github.com/MedeaMelana/Magic
bug-reports:        https://github.com/MedeaMelana/Magic/issues
license-file:       LICENSE
author:             Martijn van Steenbergen
maintainer:         martijn@van.steenbergen.nl
-- copyright:
category:           Game
build-type:         Simple
cabal-version:      >=1.8

executable magic-web-server
  hs-source-dirs:   src
  main-is:          Main.hs
  build-depends:    aeson >=0.7 && <1.0,
                    attoparsec >=0.11 && <0.14,
                    base < 5,
                    bytestring ==0.10.*,
                    Magic ==0.1.*,
                    Magic-Cards ==0.1.*,
                    MonadRandom >= 0.1 && <0.5,
                    mtl >=2.1 && <2.3,
                    operational ==0.2.*,
                    safe ==0.3.*,
                    scientific >= 0.2 && < 0.4,
                    text >=1.1 && <1.3,
                    vector ==0.11.*,
                    websockets >=0.8 && <0.10
