name:               Magic
version:            0.1
-- synopsis:
-- description:
license:            BSD3
homepage:           https://github.com/MedeaMelana/Magic
bug-reports:        https://github.com/MedeaMelana/Magic/issues
license-file:       LICENSE
author:             Martijn van Steenbergen
maintainer:         martijn@van.steenbergen.nl
-- copyright:
category:           Game
build-type:         Simple
cabal-version:      >=1.8

library
  hs-source-dirs:   src
  exposed-modules:  Magic,
                    Magic.Abilities,
                    Magic.Core,
                    Magic.CLI,
                    Magic.Engine,
                    Magic.Engine.Types,
                    Magic.Engine.Events,
                    Magic.Events,
                    Magic.IdList,
                    Magic.Labels,
                    Magic.Layers,
                    Magic.Monads,
                    Magic.Object,
                    Magic.ObjectTypes,
                    Magic.Predicates,
                    Magic.Some,
                    Magic.Target,
                    Magic.Utils,
                    Magic.World
  other-modules:    Magic.Description,
                    Magic.Types
  build-depends:    base < 5,
                    containers,
                    fclabels ==2.0.*,
                    operational ==0.2.*,
                    mtl ==2.1.*,
                    MonadRandom ==0.1.*,
                    random-shuffle ==0.0.*,
                    text ==1.1.*,
                    safe ==0.3.*,
                    Boolean ==0.1.*
